Add getAllRewardBatch api